deleting @test in head of code

--- a/Jenkinsfiles/Jenkinsfile
+++ b/Jenkinsfiles/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
             steps {
                  
                  
-                NS(surname:"Saittegin",name:"Beknazar")
+                mapconfig(surname:"Saittegin",name:"Beknazar")
             }
         }
     }
