Adding Resources Send email part

--- a/Jenkinsfiles/jenkResources/Jenkinsfile
+++ b/Jenkinsfiles/jenkResources/Jenkinsfile
@@ -10,6 +10,12 @@ pipeline {
                  
                 HelloWExternal(surname:"Saittegin",name:"Beknazar")
             }
+        stage('Sendemail') {
+            steps {
+                 
+                 
+                sendemail(surname:"Saittegin",name:"Beknazar")
+            }
         }
     }
 }
